# aoc2022

./: .gitignore  .pylintrc  .testmondata  Justfile  Makefile  README.md  day17_visualise.ipynb  fetch_puzzle.py  pyproject.toml
solutions/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_xx.py
tests/: day_02_test.py  day_03_test.py  day_04_test.py  day_05_test.py  day_06_test.py  day_07_test.py  day_08_test.py  day_09_test.py  day_10_test.py  day_11_test.py  day_12_test.py  day_13_test.py  day_14_test.py  day_15_test.py  day_16_test.py  day_17_test.py  day_18_test.py  day_19_test.py  day_20_test.py  day_21_test.py  day_22_test.py  day_23_test.py  day_24_test.py  day_25_test.py
