[tool.poetry]
name = "adventofcode 2022"
version = "0.1.0"
description = "(WIP) My attempts to advent of code 2022"
authors = ["kapppa-joe <kapppa.joe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aoc-helper = {extras = ["cli"], version = "^1.6.8"}
pytest = "^7.2.0"
numpy = "^1.23.5"
pandas = "^1.5.2"
black = "^22.10.0"
pylint = "^2.15.7"
pytest-testmon = "^1.4.2"
pytest-watch = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath='.'